src/app/components/WhoWeAre/WhoWeAre.module.css
/* styles/ItemList.module.css */

.item {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  padding-bottom: 30px;
  border-bottom: 1px solid #ccc; /* Add a bottom border for every third item */
}

.namesColumnWrapper {
  display: flex;
  flex-direction: row;
  flex: 1;
}

.spacer {
  width: -webkit-fill-available;
}

.column {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.nameColumnHovered {
  color: #0038FF;
}

.separator {
    width: 94%;
    height: 1px;
    margin-left: 1rem;
    background-color: white;
}

.gridContainer {
  position: relative; /* Ensure the grid container is a positioned element */
  display: grid;
  grid-template-columns: repeat(3, 1fr);
}

.whoWeAreTitle {
  padding: 2rem;
  font-size: 64px;
  font-style: normal;
  font-weight: 400;
  line-height: 66px; /* 103.125% */
  text-transform: uppercase;
}


.title {
    font-size: 18px;
    font-style: normal;
    font-weight: 700;
    line-height: 24px; /* 133.333% */
    letter-spacing: 0.72px;
    text-transform: uppercase;
}

.desc {
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: 24px;
    letter-spacing: 0.64px;
    text-transform: capitalize;
}

.tooltipContainer {
  position: absolute;
  top: 0;
  left: 0;
  background: transparent !important;
  opacity: 1 !important;
  margin: 16px;
  padding-right: 16px;
  z-index: 1000; /* Set a high z-index value */
}

